<resources>
    <string name="app_name">Contact List</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign up!</string>
    <string name="login">Login</string>
    <string name="keep_me_logged">Keep me Logged</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="contacts">Contacts</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="contact_list">Contact List</string>
</resources>