<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="283dp"
        android:layout_height="203dp"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaria"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:drawableTint="@color/secundaria"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfUsername"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="4dp"
                android:drawableTint="@color/secundaria"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbKeepLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tfPassword"
            app:layout_constraintTop_toBottomOf="@+id/tfPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/onPrimaria"
            app:layout_constraintEnd_toEndOf="@+id/tfPassword"
            app:layout_constraintStart_toStartOf="@+id/tfPassword"
            app:layout_constraintTop_toBottomOf="@+id/cbKeepLogin" />

        <TextView
            android:id="@+id/txtDont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/onPrimaria"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/txtSignup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/primaria"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtDont"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>